[gd_scene load_steps=4 format=3 uid="uid://cxsw1sxh2whkd"]

[ext_resource type="Script" uid="uid://h83qwim8frv3" path="res://scenes/ui/timeline/timeline_unit_row.gd" id="1_ler8q"]
[ext_resource type="Script" uid="uid://bwrtrtyvcddrm" path="res://scenes/ui/timeline/track.gd" id="2_d5wae"]
[ext_resource type="Texture2D" uid="uid://cger1spn6nu8k" path="res://icon.svg" id="3_xbjbx"]

[node name="TimelineUnitRow" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
script = ExtResource("1_ler8q")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="UnitLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Bob"

[node name="UnitHP" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Bob"

[node name="Track" type="Panel" parent="."]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("2_d5wae")

[node name="ActionOnTrack" type="Control" parent="Track"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ActionTick" type="Sprite2D" parent="Track/ActionOnTrack"]
position = Vector2(0, 25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_xbjbx")

[node name="ActionEndTick" type="Sprite2D" parent="Track/ActionOnTrack"]
position = Vector2(100, 25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_xbjbx")
